# Software_AI_Agent

./: .env.example  .gitignore  DESIGN_REVIEW.md  README.md  analysis.md  full_crew_run.txt  pyproject.toml  update_crew.py  verification_output.json
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN_REVIEW.md  SETUP.md  TASKS.md  TOOLS.md  WORKFLOW.md
src/iterative_quality_assurance_pipeline_with_test_fix_loops/: config.py  crew.py  main.py  run_logger.py
src/iterative_quality_assurance_pipeline_with_test_fix_loops/a2a/: __init__.py  client.py  models.py  runner.py  server.py
src/iterative_quality_assurance_pipeline_with_test_fix_loops/config/: agents.yaml  tasks.yaml
src/iterative_quality_assurance_pipeline_with_test_fix_loops/tools/: __init__.py  _language_detector.py  _path_utils.py  a2a_tool.py  bash_execution_tool.py  checkpoint_tool.py  ci_config_reader_tool.py  dependency_installer_tool.py  file_write_tool.py  github_branch_content_manager.py  github_oauth_tool.py  github_repository_inspector.py  lint_gate_tool.py  mcp_bridge_tool.py  patch_apply_tool.py  test_coverage_tool.py
workspace/: .run_log_20260308_204121.json  .run_log_20260308_210545.json  .run_log_20260309_004144.json  .run_log_20260309_012855.json  .run_log_20260309_015833.json  .run_log_20260309_020014.json  .run_log_20260309_023636.json
workspace/.pipeline_meta/checkpoints/: pipeline_state.json
workspace/.pipeline_meta/logs/: run_20260310_131038.json  run_20260310_131709.json  run_20260310_132242.json
workspace/js_simulator/public/: index.html
(+5 files in other folders)
